Example code for 2019.1: more complex switch