@@ -37,6 +37,11 @@
                 <version>3.8.0</version>
                 <configuration>
                     <release>${java.version}</release>
+                    <compilerArgs>
+                        <arg>--enable-preview</arg>
+                    </compilerArgs>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
                 </configuration>
                 <executions>
                     <execution>
@@ -136,7 +141,7 @@
         </dependency>
     </dependencies>
     <properties>
-        <java.version>11</java.version>
+        <java.version>12</java.version>
         <kotlin.version>1.2.51</kotlin.version>
         <org.springframework-version>4.3.4.RELEASE</org.springframework-version>
     </properties>
